# ChangeLog for dev-cpp/libjson-rpc-cpp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libjson-rpc-cpp/ChangeLog,v 1.1 2015/04/04 10:07:03 mgorny Exp $

*libjson-rpc-cpp-9999 (04 Apr 2015)

  04 Apr 2015; Michał Górny <mgorny@gentoo.org> +libjson-rpc-cpp-9999.ebuild,
  +metadata.xml:
  Introduce a JSON-RPC C++ library, related to bug #465976.