@@ -1,25 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD libjson-rpc-cpp-9999.ebuild 1202 SHA256 fb52cd2e478a0a0a8477d8da86be01e5ef78b6c79e948962366496c1db8e8205 SHA512 02daefc2815694bb38199be5ce00abd4e5ded5eb9760bac6bce3e57450170b511bee1be6a195a6910ab4c54a19bed745783c887bd8f46e31f686242cc1263dee WHIRLPOOL f1aefbb21c5b29151513a43334df5998a548f0861a04b4d8ba5f46bdca4857b1befbefa352dd4d41dad0c130bca1a346e435ea13bbc4fa5d84b53982d9de8fe9
-MISC ChangeLog 413 SHA256 7b11f2a725d1430953d64a4f95e878dda7372f198b9d01bfd7734e57d089e3b2 SHA512 7bf5b1d83e56da8deb6d20623e7c1d684290d639a605b1b784ee89e2541663b1059d93a7bceee3613d65f3dfee52cdf2368c414b40427b9c3e6834d11681486e WHIRLPOOL b6180bb8aaac2c6aceaeb6f266a8804f220b79085aa6cbb6cdcde3c380397bfb53feaad3c68fe3053de3637650f8820b7648ec4dcc97cc5ab608e8a8e7aa6666
+DIST libjson-rpc-cpp-0.5.0.tar.gz 124494 SHA256 e6d8d6c20517bb38eba9dba7f372e0a95432c4cbf55ec9b136ba841faa0a6d99 SHA512 9929f76899186f62d3201d3c884a4557e3bd55acfe0533b9a0cf543e01e6d2e5972239df7425c1a43bd59fd205261b91796fdaa1ab54b55cb5765250e473d2d4 WHIRLPOOL 95b51bdfd86e63e84556c490281829d211d937cb30a503b863180cac4a2a0894eb03ed931511e9336903f1ddad6b899921e1e09663af9cc0e5739569ddc14472
+EBUILD libjson-rpc-cpp-0.5.0.ebuild 1204 SHA256 63268294babf482813d7409bab6e2ac4f4535324ca967be3e63125e4518de98c SHA512 2f3fe69d9e5464cc5ad39757f57dfc2ba7132bce7bcc1fcbc20fee95c7231984f2725fd03861f66a58c069b210cf28962bf4e5c9f16a5ba8425b38ef81f1128d WHIRLPOOL 8a3275ef3dd87b390980a395afcc87ef05a0e437e19995295b96baa252983a97ebf17d763315266b56a107da85f388625a56c2784203b0c1c46a9a011682e619
+EBUILD libjson-rpc-cpp-9999.ebuild 1199 SHA256 5c46f6b1070f48407448c756c0959824a9da2f09590cbe7d8040f994165e0782 SHA512 b4c3907b111c301779f76a6b2702002f0c050da6544ad3403a25f33bd9f87ad9e6956fc1278446bd93100d6c31520ce81a8bc889d1a8cf37b4ee32901725cad3 WHIRLPOOL 8a2c48784ccddc4792b5c7f9599ff21e1a481bcdc93e912256f90572bc6f34fcbcece2421466f65ac4da3313abe57dd3fb5607f973df2c36ddf4cd0dffdd06d2
+MISC ChangeLog 776 SHA256 1fcce9dec5e535ccd7ca3ea2a18ec04f08e1f1886110abbc2cb93f906ebae66a SHA512 6509634e33d09b97dab8e822b7c92a2134b73fded9e2f6a139a72aa53782398c9ffcc0fd79ee4152d24e6ec4f16e403a3e166095da043f0ed1f908c228d9b038 WHIRLPOOL eb8e19cfd2c3fae2f6556467a5d1acc8f89a77186f4479af7426a3d04891adbcaf475bd41ec0f6c5e6056c10da576c4e3cf90fda6b9303ff9e9e2aed153483f3
 MISC metadata.xml 581 SHA256 d9df3d4d3fbde675669121319e6e2ae657714ed778da3c92981601b3f437c792 SHA512 15f42e21a96a21c6467f0c28ba9768fbdf7bfb84a62b0b54469699c11b407e8f145e162d33e1fa302b67297db603389b3281c821f57d544fa80858a09bc37468 WHIRLPOOL 746eee33f8553a3a9a1c9da36140cadbc7c7a49c445dc7c3f7933307656b8682473b4d8bc89806c246747a435c2c3bf8afe77ccca845defc6ca0b9cd4fab287d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVH7fMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVI9S6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO4VcQAI62AJMhR7mOSZuf6Fn8BEKx
-UdaYAOnEeQH0epQaHUd3G2YbfTov1xLMwT1DE/SVKp6ujVAor5tKeJfCGkm425DF
-XO5O55Vj0NHhvQsNCQm0tQCeAbBdQmfNKR7iiX1QJVIwq2kZN2nVTzBWbGoXb6RR
-HOnD5TVF79KY1itw/lML1BINUerOXPnLODFflFOuwNE/ahVJwgyhUtuHMhXTK4eu
-dOe9CTZnYi37GBBiuRo3X+yzMYQwDMVC86wya1HH3ySAds7gyML06NvcYeqtqUtP
-k44LbXKyrQokSf4Ssb6G2ED8J5OGC8rxucbtSkkwvkB6GESdpHMzDrZ7cjNhIsK2
-asgzGQKEyyZQpoMyVy0Lc5wLPXcArWQ0anJ2QwgrJJUBcrYrBh2hZbIRO5nPSmc1
-bBedwc68WynlK5SR4LkgCrl169h49drV2WroTqgPKMJ9W5A2VT/A3K/10AeWmmgK
-+A6QNnuHwbEV6yR1OOCr/E6I33O+o26pBfUKAYAiMoi/rvP/3X18qCRsVwd9QJ6c
-X4zj23QajLRTNXdFZ5m8uOmMzrU/mpGWc6d95p+QiDYWLHBryFOhfcCqVlqh9W+w
-Wu9qU9Z/kdLkULT6GPZo5YV0ekSXrij4wvSienczsXQMkK+0fL+RlFpz5e/KU5IX
-q+uvr/0O8VY3YQ1Sy69v
-=O+Nt
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOlbYQAIdo7WWhjSKNP8ssucWG55nZ
+5uEhgoYGE6gQD3odAUzhg+FSnXTXLd1kz8oMGncJYoWc6qwlv2iqzAWJnrofrmrT
+dnpGZ2YV9M31T8Ch6DUJ3j79ejaoC58heKez7cpmf/J/8siEoufFhK9qlIN9WOH7
+YKEhJ6Fw4N4aSqItGYjk0epl15ohXzAZE2UvzECww3p+z/QV8vsHEgL9+HgqUS/3
+zXoEMb56G1W7rTi+Pla0sGm8IroA+vmKV/ogsD1soHcbc+n05nD44v3m9z9u6RNh
+JURB7QqyHlRfOroP/2uzEXZ+Tvusab+d4eOjvOnJAZ2euyJOFqrGCOgnyQSgFVoc
+D4FBAbdPDP8IbCw94AzcKN5elnqUDcq0s6GmvJGcVas8nyXCaokkjPeXh5yNVQqK
+VBNloKczI+jybsFJCIk/rUdVtppt8kk3dsaZopqkOlcsaOQWO1S2YSjWMl5iJ7cQ
+41+Ei+Fi7YGnSHZwMRkABjaVThX4Iix0XxdWDJAKj3zzFYjsnwnvFVoDoTtkEB0S
+/brh8Kaa+GhuuxlX8Nkr3sFbcgzMiMDL7WFWVsWrlkpUUP2U84aPAEdBwCJZ0Weu
+WGz1R8tUo+swbdTE1vb+YAjZahEZCFa6rwlcP/QmBZT9ERNiFshsHNGXJssf9/KB
+4TC0G7DgSSeum16AY1r6
+=9oU0
 -----END PGP SIGNATURE-----
