@@ -1,20 +1,18 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libjson-rpc-cpp/libjson-rpc-cpp-9999.ebuild,v 1.3 2015/04/07 12:59:37 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libjson-rpc-cpp/libjson-rpc-cpp-0.5.0.ebuild,v 1.1 2015/04/07 12:56:53 mgorny Exp $
 
 EAPI=5
 
-EGIT_REPO_URI="https://github.com/cinemast/${PN}"
-EGIT_BRANCH=develop
-inherit cmake-utils git-r3
+inherit cmake-utils
 
 DESCRIPTION="JSON-RPC (1.0 & 2.0) framework for C++"
 HOMEPAGE="https://github.com/cinemast/libjson-rpc-cpp"
-SRC_URI=""
+SRC_URI="https://github.com/cinemast/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE="doc +http-client +http-server +stubgen test"
 
 RDEPEND="
