@@ -1,6 +1,16 @@
 # ChangeLog for dev-cpp/libjson-rpc-cpp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libjson-rpc-cpp/ChangeLog,v 1.1 2015/04/04 10:07:03 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libjson-rpc-cpp/ChangeLog,v 1.3 2015/04/07 12:59:37 mgorny Exp $
+
+  07 Apr 2015; Michał Górny <mgorny@gentoo.org> libjson-rpc-cpp-9999.ebuild:
+  Drop accidental keywords on -9999. Oops.
+
+*libjson-rpc-cpp-0.5.0 (07 Apr 2015)
+
+  07 Apr 2015; Michał Górny <mgorny@gentoo.org> +libjson-rpc-cpp-0.5.0.ebuild,
+  libjson-rpc-cpp-9999.ebuild:
+  Add a release version now that the build system fixes have made it into the
+  release.
 
 *libjson-rpc-cpp-9999 (04 Apr 2015)
 
